[gd_scene load_steps=6 format=3 uid="uid://lqdjxr5aq2pm"]

[ext_resource type="Script" path="res://game.gd" id="1_w4sfh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vs50p"]
bg_color = Color(0.46135, 0.212246, 0.00836753, 1)
border_width_bottom = 10
border_color = Color(0.259251, 0.103988, 0.0103737, 1)
expand_margin_left = 20.0
expand_margin_right = 20.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_paq0f"]
bg_color = Color(0.713972, 0.343464, 0.0243649, 1)
border_width_bottom = 10
border_color = Color(0.292122, 0.0616881, 0.0192693, 1)
expand_margin_left = 20.0
expand_margin_right = 20.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y4qfr"]
bg_color = Color(0.46135, 0.212246, 0.00836753, 1)
expand_margin_left = 20.0
expand_margin_right = 20.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tih7w"]

[node name="Game" type="Node2D"]
script = ExtResource("1_w4sfh")

[node name="GridContainer" type="GridContainer" parent="."]
offset_left = 42.0
offset_top = 77.0
offset_right = 682.0
offset_bottom = 717.0
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 5

[node name="Button" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
mouse_filter = 2
theme_override_font_sizes/font_size = 72
text = "x"

[node name="Button2" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
mouse_filter = 2
theme_override_font_sizes/font_size = 72
text = "x"

[node name="Button3" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
mouse_filter = 2
theme_override_font_sizes/font_size = 72
text = "x"

[node name="Button4" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
mouse_filter = 2
theme_override_font_sizes/font_size = 72
text = "x"

[node name="Button5" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
mouse_filter = 2
theme_override_font_sizes/font_size = 72
text = "x"

[node name="Button6" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
mouse_filter = 2
theme_override_font_sizes/font_size = 72
text = "x"

[node name="Button7" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
mouse_filter = 2
theme_override_font_sizes/font_size = 72
text = "x"

[node name="Button8" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
mouse_filter = 2
theme_override_font_sizes/font_size = 72
text = "x"

[node name="Button9" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
mouse_filter = 2
theme_override_font_sizes/font_size = 72
text = "x"

[node name="Button10" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
mouse_filter = 2
theme_override_font_sizes/font_size = 72
text = "x"

[node name="Button11" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
mouse_filter = 2
theme_override_font_sizes/font_size = 72
text = "x"

[node name="Button12" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
mouse_filter = 2
theme_override_font_sizes/font_size = 72
text = "x"

[node name="Button13" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
mouse_filter = 2
theme_override_font_sizes/font_size = 72
text = "x"

[node name="Button14" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
mouse_filter = 2
theme_override_font_sizes/font_size = 72
text = "x"

[node name="Button15" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
mouse_filter = 2
theme_override_font_sizes/font_size = 72
text = "x"

[node name="Button16" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
mouse_filter = 2
theme_override_font_sizes/font_size = 72
text = "x"

[node name="Button17" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
mouse_filter = 2
theme_override_font_sizes/font_size = 72
text = "x"

[node name="Button18" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
mouse_filter = 2
theme_override_font_sizes/font_size = 72
text = "x"

[node name="Button19" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
mouse_filter = 2
theme_override_font_sizes/font_size = 72
text = "x"

[node name="Button20" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
mouse_filter = 2
theme_override_font_sizes/font_size = 72
text = "x"

[node name="Button21" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
mouse_filter = 2
theme_override_font_sizes/font_size = 72
text = "x"

[node name="Button22" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
mouse_filter = 2
theme_override_font_sizes/font_size = 72
text = "x"

[node name="Button23" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
mouse_filter = 2
theme_override_font_sizes/font_size = 72
text = "x"

[node name="Button24" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
mouse_filter = 2
theme_override_font_sizes/font_size = 72
text = "x"

[node name="Button25" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
mouse_filter = 2
theme_override_font_sizes/font_size = 72
text = "x"

[node name="Menu" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="Menu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0941176, 0.0941176, 0.0941176, 0.941176)

[node name="ResultLabel" type="Label" parent="Menu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -310.0
offset_right = 220.0
offset_bottom = -186.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 90
text = "YOU WON"
horizontal_alignment = 1

[node name="WordLabel" type="Label" parent="Menu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -189.0
offset_right = 220.0
offset_bottom = -65.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 42
text = "Correct Word: MANGO"
horizontal_alignment = 1

[node name="Button" type="Button" parent="Menu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -71.0
offset_top = -41.0
offset_right = 75.0
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_vs50p")
theme_override_styles/hover = SubResource("StyleBoxFlat_paq0f")
theme_override_styles/pressed = SubResource("StyleBoxFlat_y4qfr")
theme_override_styles/focus = SubResource("StyleBoxEmpty_tih7w")
text = "PLAY"

[connection signal="pressed" from="Menu/Button" to="." method="_on_button_pressed"]
